--- a/firebase.json
+++ b/firebase.json
@@ -1,28 +1,25 @@
 {
-  "hosting": [
-    {
-      "target": "AssistMe",
-      "public": "dist/AssistMe",
-      "ignore": [
-        "**/.*"
-      ],
-      "headers": [
-        {
-          "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
-          "headers": [
+    "hosting": [{
+        "target": "AssistMe",
+        "public": "dist/AssistMe",
+        "ignore": [
+            "**/.*"
+        ],
+        "headers": [{
+            "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
+            "headers": [{
+                "key": "Cache-Control",
+                "value": "public,max-age=31536000,immutable"
+            }]
+        }],
+        "rewrites": [{
+                "source": "/assistme-39d97/us-central1/verifyExamPasscode",
+                "function": "verifyExamPasscode"
+            },
             {
-              "key": "Cache-Control",
-              "value": "public,max-age=31536000,immutable"
+                "source": "**",
+                "destination": "/index.html"
             }
-          ]
-        }
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    }
-  ]
+        ]
+    }]
 }
