--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^7.13.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
+    "sanitizer": "^0.1.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
